Fix icon area for scheduling and recipient boxfields
Ref: KW-2870

The areas for the icons were too small (15x15px) and the icon_card icon
of the breeze icon pack was too 'low'.

--- a/client/resources/scss/components/_scheduling.scss
+++ b/client/resources/scss/components/_scheduling.scss
@@ -95,9 +95,8 @@
 
 				/* the icons */
 				.x-zarafa-boxfield-item-icon {
-					width: 11px;
-					height: 11px;
-					margin-top: ($font-default-line-height - 2px - 11px)/2;
+					width: 16px;
+					height: 16px;
 				}
 			}
 
